@@ -62,7 +62,6 @@ import org.sosy_lab.cpachecker.cpa.functionpointer.FunctionPointerState.NamedFun
 import org.sosy_lab.cpachecker.cpa.functionpointer.FunctionPointerState.NullTarget;
 import org.sosy_lab.cpachecker.cpa.functionpointer.FunctionPointerState.UnknownTarget;
 import org.sosy_lab.cpachecker.exceptions.CPATransferException;
-import org.sosy_lab.cpachecker.exceptions.UnrecognizedCFAEdgeException;
 import org.sosy_lab.cpachecker.exceptions.UnrecognizedCodeException;
 
 @Options(prefix = "cpa.functionpointer")
@@ -122,8 +121,8 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
     String functionCallVariable = getFunctionPointerCall(pCfaEdge);
     if (functionCallVariable != null) {
       FunctionPointerTarget target = oldState.getTarget(functionCallVariable);
-      if (target instanceof NamedFunctionTarget) {
-        String functionName = ((NamedFunctionTarget) target).getFunctionName();
+      if (target instanceof NamedFunctionTarget namedFunctionTarget) {
+        String functionName = namedFunctionTarget.getFunctionName();
         logger.logfOnce(
             Level.WARNING,
             "%s: Function pointer %s points to %s,"
@@ -170,8 +169,19 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
           if ((v1 instanceof NamedFunctionTarget && v2 instanceof NamedFunctionTarget)
               || v1 instanceof NullTarget
               || v2 instanceof NullTarget) {
-            boolean result = (op == BinaryOperator.EQUALS) ? v1.equals(v2) : !v1.equals(v2);
-            if (result != a.getTruthAssumption()) {
+            if (!a.getTruthAssumption()) {
+              // in the else branch, invert the operator
+              op =
+                  (op == BinaryOperator.EQUALS) ? BinaryOperator.NOT_EQUALS : BinaryOperator.EQUALS;
+            }
+            boolean result;
+            // check whether the operator can hold for the two function pointer targets
+            if (op == BinaryOperator.EQUALS) {
+              result = FunctionPointerTarget.maybeEqual(v1, v2);
+            } else {
+              result = FunctionPointerTarget.maybeUnequal(v1, v2);
+            }
+            if (!result) {
               logger.log(Level.FINE, "Should not go by the edge", a);
               return false; // should not go by this edge
             } else {
@@ -191,7 +201,7 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
             // function pointer call into a series of if-else-if-else edges,
             // where there is a single static function call in each branch.
             // If the user wishes, we skip these function calls by not going entering the branches.
-            // Of course we have to go into the else branches.
+            // Of course, we have to go into the else branches.
 
             if (ignoreInvalidFunctionPointerCalls) {
               if (v1 instanceof InvalidTarget && v2 instanceof NamedFunctionTarget) {
@@ -250,11 +260,11 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
     }
 
     CStatement statement = ((CStatementEdge) pCfaEdge).getStatement();
-    if (!(statement instanceof CFunctionCall)) {
+    if (!(statement instanceof CFunctionCall cFunctionCall)) {
       return null;
     }
 
-    CFunctionCallExpression funcCall = ((CFunctionCall) statement).getFunctionCallExpression();
+    CFunctionCallExpression funcCall = cFunctionCall.getFunctionCallExpression();
     CExpression nameExp = funcCall.getFunctionNameExpression();
 
     if ((nameExp instanceof CIdExpression idExp)
@@ -264,7 +274,7 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
     }
 
     // functions may be called either as f() or as (*f)(),
-    // so remove the star operator if its there
+    // so remove the star operator if it's there
     if (nameExp instanceof CPointerExpression) {
       nameExp = ((CPointerExpression) nameExp).getOperand();
     }
@@ -319,66 +329,43 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
       throws CPATransferException {
 
     switch (pCfaEdge.getEdgeType()) {
-
-      // declaration of a function pointer.
-      case DeclarationEdge:
-        {
-          CDeclarationEdge declEdge = (CDeclarationEdge) pCfaEdge;
-          handleDeclaration(newState, declEdge);
-          break;
-        }
-
-      // if edge is a statement edge, e.g. a = b + c
-      case StatementEdge:
-        {
-          CStatementEdge statementEdge = (CStatementEdge) pCfaEdge;
-          handleStatement(newState, statementEdge.getStatement(), pCfaEdge);
-          break;
-        }
-
-      case FunctionCallEdge:
-        {
-          CFunctionCallEdge functionCallEdge = (CFunctionCallEdge) pCfaEdge;
-          handleFunctionCall(newState, functionCallEdge);
-          break;
-        }
-
-      case ReturnStatementEdge:
-        {
-          CReturnStatementEdge returnStatementEdge = (CReturnStatementEdge) pCfaEdge;
-          handleReturnStatement(newState, returnStatementEdge.asAssignment(), pCfaEdge);
-          break;
-        }
-
-      case FunctionReturnEdge:
-        {
-          CFunctionReturnEdge functionReturnEdge = (CFunctionReturnEdge) pCfaEdge;
-          handleFunctionReturn(newState, functionReturnEdge);
-          break;
-        }
-
-      // maybe two function pointers are compared.
-      case AssumeEdge:
-        break;
-
-      // nothing to do.
-      case BlankEdge:
-      case CallToReturnEdge:
-        break;
-
-      default:
-        throw new UnrecognizedCFAEdgeException(pCfaEdge);
+      case DeclarationEdge -> {
+        // declaration of a function pointer.
+        CDeclarationEdge declEdge = (CDeclarationEdge) pCfaEdge;
+        handleDeclaration(newState, declEdge);
+        // if edge is a statement edge, e.g. a = b + c
+      }
+      case StatementEdge -> {
+        CStatementEdge statementEdge = (CStatementEdge) pCfaEdge;
+        handleStatement(newState, statementEdge.getStatement(), pCfaEdge);
+      }
+      case FunctionCallEdge -> {
+        CFunctionCallEdge functionCallEdge = (CFunctionCallEdge) pCfaEdge;
+        handleFunctionCall(newState, functionCallEdge);
+      }
+      case ReturnStatementEdge -> {
+        CReturnStatementEdge returnStatementEdge = (CReturnStatementEdge) pCfaEdge;
+        handleReturnStatement(newState, returnStatementEdge.asAssignment(), pCfaEdge);
+      }
+      case FunctionReturnEdge -> {
+        CFunctionReturnEdge functionReturnEdge = (CFunctionReturnEdge) pCfaEdge;
+        handleFunctionReturn(newState, functionReturnEdge);
+        // maybe two function pointers are compared.
+      }
+      case AssumeEdge -> {
+        // nothing to do.
+      }
+      case BlankEdge, CallToReturnEdge -> {}
     }
   }
 
   private void handleDeclaration(FunctionPointerState.Builder pNewState, CDeclarationEdge declEdge)
       throws UnrecognizedCodeException {
 
-    if (!(declEdge.getDeclaration() instanceof CVariableDeclaration)) {
+    if (!(declEdge.getDeclaration() instanceof CVariableDeclaration decl)) {
       // not a variable declaration
       return;
     }
-    CVariableDeclaration decl = (CVariableDeclaration) declEdge.getDeclaration();
 
     // get name of declaration
     String name = decl.getQualifiedName();
@@ -388,8 +375,8 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
 
     if (decl.getInitializer() != null) {
       CInitializer init = decl.getInitializer();
-      if (init instanceof CInitializerExpression) {
-        initialValue = getValue(((CInitializerExpression) init).getExpression(), pNewState);
+      if (init instanceof CInitializerExpression cInitializerExpression) {
+        initialValue = getValue(cInitializerExpression.getExpression(), pNewState);
       }
     }
 
@@ -415,9 +402,9 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
       FunctionPointerTarget target = pNewState.popTarget();
       pNewState.setTarget(varName, target);
 
-    } else if (pStatement instanceof CAssignment) {
+    } else if (pStatement instanceof CAssignment cAssignment) {
       // assignment like "a = b" or "a = foo()"
-      handleAssignment(pNewState, (CAssignment) pStatement, pCfaEdge);
+      handleAssignment(pNewState, cAssignment, pCfaEdge);
 
     } else if (pStatement instanceof CFunctionCallStatement callStmt
         && callStmt.getFunctionCallExpression().getFunctionNameExpression()
@@ -430,7 +417,7 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
           params.size() == 1,
           "atexit() takes one argument, but it was called with %s",
           params.size());
-      CExpression argExpr = params.get(0);
+      CExpression argExpr = params.getFirst();
       ExpressionValueVisitor evaluator = new ExpressionValueVisitor(pNewState);
       FunctionPointerTarget target = argExpr.accept(evaluator);
       // Note: We want AtExitState.peek() to only return NullTarget when the stack is actually
@@ -516,8 +503,8 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
     assert summaryEdge != null;
 
     CFunctionCall funcCall = pFunctionReturnEdge.getFunctionCall();
-    if (funcCall instanceof CFunctionCallAssignmentStatement) {
-      CExpression left = ((CFunctionCallAssignmentStatement) funcCall).getLeftHandSide();
+    if (funcCall instanceof CFunctionCallAssignmentStatement cFunctionCallAssignmentStatement) {
+      CExpression left = cFunctionCallAssignmentStatement.getLeftHandSide();
       String varName = getLeftHandSide(left, summaryEdge);
       if (varName != null) {
         Optional<CVariableDeclaration> returnValue =
@@ -540,9 +527,9 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
   private String getLeftHandSide(CExpression lhsExpression, CFAEdge edge)
       throws UnrecognizedCodeException {
 
-    if (lhsExpression instanceof CIdExpression) {
+    if (lhsExpression instanceof CIdExpression cIdExpression) {
       // a = ...
-      return ((CIdExpression) lhsExpression).getDeclaration().getQualifiedName();
+      return cIdExpression.getDeclaration().getQualifiedName();
 
     } else if (lhsExpression instanceof CPointerExpression) {
       // *a = ...
