@@ -236,7 +236,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
     }
     if (!inserted) {
       if (pOther.touches(lastInterval)) {
-        resultIntervals.remove(resultIntervals.size() - 1);
+        resultIntervals.removeLast();
         lastInterval = union(pOther, lastInterval);
         resultIntervals.add(lastInterval);
       } else {
@@ -288,7 +288,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
     if (contains(pOther)) {
       return CompoundBitVectorInterval.of(pOther);
     }
-    if (intervals.size() == 1 && pOther.contains(intervals.get(0))) {
+    if (intervals.size() == 1 && pOther.contains(intervals.getFirst())) {
       return this;
     }
     CompoundBitVectorInterval result = bottom(info);
@@ -510,7 +510,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
   /**
    * Checks if there is a lower bound to this compound state.
    *
-   * @return <code>true</code> if there is an lower bound to this compound state, <code>false</code>
+   * @return <code>true</code> if there is a lower bound to this compound state, <code>false</code>
    *     otherwise.
    */
   @Override
@@ -536,7 +536,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    */
   @Override
   public BigInteger getLowerBound() {
-    return intervals.get(0).getLowerBound();
+    return intervals.getFirst().getLowerBound();
   }
 
   /**
@@ -546,7 +546,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    */
   @Override
   public BigInteger getUpperBound() {
-    return intervals.get(intervals.size() - 1).getUpperBound();
+    return intervals.getLast().getUpperBound();
   }
 
   /**
@@ -557,7 +557,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    */
   @Override
   public boolean isSingleton() {
-    return !isBottom() && intervals.size() == 1 && intervals.get(0).isSingleton();
+    return !isBottom() && intervals.size() == 1 && intervals.getFirst().isSingleton();
   }
 
   /**
@@ -959,7 +959,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
     }
     ImmutableList.Builder<BitVectorInterval> resultIntervals =
         ImmutableList.builderWithExpectedSize(intervals.size());
-    resultIntervals.add(intervals.get(0).extendToMinValue());
+    resultIntervals.add(intervals.getFirst().extendToMinValue());
     resultIntervals.addAll(intervals.subList(1, intervals.size()));
     return getInternal(info, resultIntervals.build());
   }
@@ -1002,7 +1002,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state resulting from adding the given value to this state.
    *
    * @param pValue the value to add to this state.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from adding the given value to this state.
    */
   public CompoundBitVectorInterval add(
@@ -1016,7 +1016,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state resulting from adding the given interval to this state.
    *
    * @param pInterval the interval to add to this state.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @param pOverflowEventHandler the handle for overflows
    * @return the state resulting from adding the given interval to this state.
    */
@@ -1033,7 +1033,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state resulting from adding the given state to this state.
    *
    * @param pState the state to add to this state.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from adding the given state to this state.
    */
   public CompoundBitVectorInterval add(
@@ -1048,7 +1048,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state resulting from multiplying this state with the given value.
    *
    * @param pValue the value to multiply this state with.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from multiplying this state with the given value.
    */
   public CompoundBitVectorInterval multiply(
@@ -1070,7 +1070,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state resulting from multiplying this state with the given interval.
    *
    * @param pInterval the interval to multiply this state with.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from multiplying this state with the given interval.
    */
   public CompoundBitVectorInterval multiply(
@@ -1089,7 +1089,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state resulting from multiplying this state with the given state.
    *
    * @param pState the state to multiply this state with.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from multiplying this state with the given state.
    */
   public CompoundBitVectorInterval multiply(
@@ -1097,7 +1097,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
       boolean pAllowSignedWrapAround,
       final OverflowEventHandler pOverflowEventHandler) {
     if (pState.intervals.size() == 1) {
-      return multiply(pState.intervals.get(0), pAllowSignedWrapAround, pOverflowEventHandler);
+      return multiply(pState.intervals.getFirst(), pAllowSignedWrapAround, pOverflowEventHandler);
     }
     return applyOperationToAllAndUnite(
         IICOperatorFactory.INSTANCE.getMultiply(pAllowSignedWrapAround, pOverflowEventHandler),
@@ -1108,7 +1108,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state resulting from dividing this state by the given value.
    *
    * @param pValue the value to divide this state by.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from dividing this state by the given value.
    */
   public CompoundBitVectorInterval divide(
@@ -1124,7 +1124,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state resulting from dividing this state by the given interval.
    *
    * @param pInterval the interval to divide this state by.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from dividing this state by the given interval.
    */
   public CompoundBitVectorInterval divide(
@@ -1140,7 +1140,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state resulting from dividing this state by the given state.
    *
    * @param pState the state to divide this state by.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from dividing this state by the given state.
    */
   public CompoundBitVectorInterval divide(
@@ -1156,7 +1156,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state representing the remainder of dividing this state by the given value.
    *
    * @param pValue the value to divide this state by.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state representing the remainder of dividing this state by the given value.
    */
   public CompoundBitVectorInterval modulo(
@@ -1172,7 +1172,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state representing the remainder of dividing this state by the given interval.
    *
    * @param pInterval the interval to divide this state by.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state representing the remainder of dividing this state by the given interval.
    */
   public CompoundBitVectorInterval modulo(
@@ -1188,7 +1188,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state representing the remainder of dividing this state by the given state.
    *
    * @param pState the state to divide this state by.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state representing the remainder of dividing this state by the given state.
    */
   public CompoundBitVectorInterval modulo(
@@ -1204,7 +1204,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state resulting from left shifting this state by the given value.
    *
    * @param pValue the value to shift this state by.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from left shifting this state by the given value.
    */
   public CompoundBitVectorInterval shiftLeft(
@@ -1220,7 +1220,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state resulting from left shifting this state by the given interval.
    *
    * @param pInterval the interval to shift this state by.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from left shifting this state by the given interval.
    */
   public CompoundBitVectorInterval shiftLeft(
@@ -1236,7 +1236,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state resulting from left shifting this state by the given state.
    *
    * @param pState the state to shift this state by.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from left shifting this state by the given state.
    */
   public CompoundBitVectorInterval shiftLeft(
@@ -1252,7 +1252,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state resulting from right shifting this state by the given value.
    *
    * @param pValue the value to shift this state by.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from right shifting this state by the given value.
    */
   public CompoundBitVectorInterval shiftRight(
@@ -1268,7 +1268,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state resulting from right shifting this state by the given interval.
    *
    * @param pInterval the interval to shift this state by.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from right shifting this state by the given interval.
    */
   public CompoundBitVectorInterval shiftRight(
@@ -1284,7 +1284,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * Computes the state resulting from right shifting this state by the given state.
    *
    * @param pState the state to shift this state by.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from right shifting this state by the given state.
    */
   public CompoundBitVectorInterval shiftRight(
@@ -1530,7 +1530,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * states' values is returned. Otherwise, top is returned.
    *
    * @param pState the state to bit-wise-and with this state.
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from performing the bitwise and-operation on this state and the
    *     given state. If one of the states is bottom, bottom is returned. If both states represent
    *     single values, a state representing the value obtained by the bit-wise and-operation on the
@@ -1601,7 +1601,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
   /**
    * Computes the state resulting from computing the absolute values of this state.
    *
-   * @param pAllowSignedWrapAround whether or not signed wrap-around is allowed.
+   * @param pAllowSignedWrapAround whether signed wrap-around is allowed.
    * @return the state resulting from computing the absolute values of this state.
    */
   public CompoundBitVectorInterval absolute(
@@ -1770,7 +1770,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * represents the false state while the other does not contain the false state, a state
    * representing true is returned. If either both of the states represent the false state or
    * neither of them represents false, a state representing false is returned. If one of the states
-   * is bottom, bottom is returned. Otherwise top is returned.
+   * is bottom, bottom is returned. Otherwise, top is returned.
    *
    * @param pState the state to XOR with this state.
    * @return a state representing true if either this state or the given state represents false
@@ -1821,7 +1821,7 @@ public class CompoundBitVectorInterval implements CompoundIntegralInterval, BitV
    * the false state while the other does not contain the false state, a state representing true is
    * returned. If either both of the states represent the false state or neither of them represents
    * false, a state representing false is returned. If one of the states is bottom, bottom is
-   * returned. Otherwise top is returned.
+   * returned. Otherwise, top is returned.
    *
    * @param p1 one of the states to apply the exclusive or operation on.
    * @param p2 one of the states to apply the exclusive or operation on.
