@@ -89,7 +89,7 @@ public abstract class RefinementStrategy {
     startRefinementOfPath();
 
     // The last state along the path is the target (error) state
-    ARGState lastElement = abstractionStatesTrace.get(abstractionStatesTrace.size() - 1);
+    ARGState lastElement = abstractionStatesTrace.getLast();
     // assert lastElement.isTarget();
 
     Pair<ARGState, List<ARGState>> rootOfInfeasibleArgAndChangedElements;
@@ -223,7 +223,7 @@ public abstract class RefinementStrategy {
    *
    * @param interpolant The interpolant.
    * @param state The state.
-   * @return True if no refinement was necessary (this implies that refinement on all of the state's
+   * @return True if no refinement was necessary (this implies that refinement on all the state's
    *     parents is also not necessary)
    */
   @ForOverride
