@@ -105,11 +105,11 @@ public final class SlicingAbstractionsStrategy extends RefinementStrategy
       SlicingAbstractionsStrategy.this.printStatistics(out);
     }
 
-    public void increaseRefinementCounter() {
+    void increaseRefinementCounter() {
       refinementCount++;
     }
 
-    public void increaseSolverCallCounter() {
+    void increaseSolverCallCounter() {
       solverCallCount++;
     }
   }
@@ -217,7 +217,7 @@ public final class SlicingAbstractionsStrategy extends RefinementStrategy
       newState = s.forkWithReplacements(Collections.singleton(copiedPredicateState));
       forkedStateMap.put(s, newState);
 
-      // Now we strengthen the splitted state with negated interpolant:
+      // Now we strengthen the split state with negated interpolant:
       BooleanFormula negatedItp = bfmgr.not(itp);
       impact.strengthenStateWithInterpolant(negatedItp, newState, lastAbstraction);
     }
@@ -384,7 +384,7 @@ public final class SlicingAbstractionsStrategy extends RefinementStrategy
 
     // for minimalSlicing, there could be the case that no states got changed
     // in the refinement, but still some edges in the error path are infeasible
-    // Therefore we need to make sure that allChangedStates at least contains
+    // Therefore, we need to make sure that allChangedStates at least contains
     // all abstraction states on the error path:
     if (minimalSlicing) {
       allChangedStates.addAll(
@@ -396,9 +396,9 @@ public final class SlicingAbstractionsStrategy extends RefinementStrategy
     for (ARGState currentState : allChangedStates) {
 
       // Optimization to reduce number of solver calls:
-      if (currentState instanceof SLARGState) {
-        SlicingAbstractionsUtils.removeIncomingEdgesWithLocationMismatch((SLARGState) currentState);
-        SlicingAbstractionsUtils.removeOutgoingEdgesWithLocationMismatch((SLARGState) currentState);
+      if (currentState instanceof SLARGState sLARGState) {
+        SlicingAbstractionsUtils.removeIncomingEdgesWithLocationMismatch(sLARGState);
+        SlicingAbstractionsUtils.removeOutgoingEdgesWithLocationMismatch(sLARGState);
       }
 
       Map<ARGState, PersistentList<ARGState>> segmentMap =
@@ -541,9 +541,9 @@ public final class SlicingAbstractionsStrategy extends RefinementStrategy
               + " must be infeasible!";
     }
 
-    assert !(startState instanceof SLARGState)
-        || ((SLARGState) startState).getEdgeSetToChild(endState) == null
-        || ((SLARGState) startState).getEdgeSetToChild(endState).size() > 0
+    assert !(startState instanceof SLARGState sLARGState)
+        || sLARGState.getEdgeSetToChild(endState) == null
+        || sLARGState.getEdgeSetToChild(endState).size() > 0
         || infeasible;
     return infeasible;
   }
@@ -619,7 +619,7 @@ public final class SlicingAbstractionsStrategy extends RefinementStrategy
 
     // root state needs special treatment:
     if (Objects.equals(parent, rootState)) {
-      ARGState firstAfterRoot = abstractionStatesTrace.get(0);
+      ARGState firstAfterRoot = abstractionStatesTrace.getFirst();
       ARGState s = forkedStateMap.get(firstAfterRoot);
       if (Objects.equals(s, child) && pChangedElements.contains(firstAfterRoot)) {
         return true;
