@@ -8,11 +8,12 @@
 
 package org.sosy_lab.cpachecker.cpa.predicate;
 
+import static com.google.common.truth.Truth.assertThat;
+
 import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
-import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
@@ -69,7 +70,6 @@ public class SlicingAbstractionsTest {
   private Map<String, String> extraOptions;
 
   @Parameters(name = "{3}: {0}")
-  @SuppressFBWarnings("NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE")
   public static Collection<Object[]> data() {
     File taskfolder = new File(TEST_DIR_PATH);
     List<Object> files =
@@ -77,11 +77,13 @@ public class SlicingAbstractionsTest {
             .<Object>transform(File::getName)
             .filter(x -> ((String) x).contains("unreach"))
             .toList();
+    assertThat(files).hasSize(2);
     List<Object> overflowFiles =
         FluentIterable.from(taskfolder.listFiles())
             .<Object>transform(File::getName)
             .filter(x -> ((String) x).contains("overflow"))
             .toList();
+    assertThat(overflowFiles).hasSize(4);
 
     File configfolder = new File(CONFIG_DIR_PATH);
     List<Object> configs =
@@ -116,7 +118,7 @@ public class SlicingAbstractionsTest {
             .transform(
                 x -> {
                   Object[] result = new Object[4];
-                  result[0] = x.get(0);
+                  result[0] = x.getFirst();
                   result[1] = x.get(1);
                   result[2] = new HashMap<String, String>();
                   result[3] =
@@ -131,7 +133,7 @@ public class SlicingAbstractionsTest {
             .transform(
                 x -> {
                   Object[] result = new Object[4];
-                  result[0] = x.get(0);
+                  result[0] = x.getFirst();
                   result[1] = x.get(1);
                   result[2] = new HashMap<String, String>();
                   result[3] =
@@ -148,7 +150,7 @@ public class SlicingAbstractionsTest {
   private static Object[] repack(List<Object> x) {
     Object[] result = new Object[4];
 
-    result[0] = x.get(0); // file to test
+    result[0] = x.getFirst(); // file to test
     result[1] = x.get(1); // config to test file with
 
     // result[2] will contain a map of extra options taken from x at positions 2-4
@@ -205,16 +207,20 @@ public class SlicingAbstractionsTest {
 
     TestResults results = CPATestRunner.run(config, fullPath);
     if (!configname.contains("overflow")) {
-      if (pFilename.contains("_true_assert") || pFilename.contains("_true-unreach")) {
+      if (pFilename.contains("_true-assert") || pFilename.contains("_true-unreach")) {
         results.assertIsSafe();
-      } else if (pFilename.contains("_false_assert") || pFilename.contains("_false-unreach")) {
+      } else if (pFilename.contains("_false-assert") || pFilename.contains("_false-unreach")) {
         results.assertIsUnsafe();
+      } else {
+        throw new AssertionError("verdict missing");
       }
     } else {
-      if (pFilename.contains("_true_no_overflow")) {
+      if (pFilename.contains("_true-no-overflow")) {
         results.assertIsSafe();
-      } else if (pFilename.contains("_false_no_overflow")) {
+      } else if (pFilename.contains("_false-no-overflow")) {
         results.assertIsUnsafe();
+      } else {
+        throw new AssertionError("verdict missing");
       }
     }
   }
