@@ -8,11 +8,14 @@
 
 package org.sosy_lab.cpachecker.cpa.smg2;
 
+import static com.google.common.base.Preconditions.checkState;
 import static org.sosy_lab.common.collect.Collections3.transformedImmutableListCopy;
 import static org.sosy_lab.cpachecker.cfa.ast.c.CBinaryExpression.BinaryOperator.LESS_EQUAL;
 import static org.sosy_lab.cpachecker.cfa.ast.c.CBinaryExpression.BinaryOperator.LESS_THAN;
+import static org.sosy_lab.cpachecker.util.StandardFunctions.isMemoryAllocatingFunction;
 
 import com.google.common.base.Preconditions;
+import com.google.common.collect.ImmutableCollection;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
@@ -60,6 +63,7 @@ import org.sosy_lab.cpachecker.cfa.ast.c.CUnaryExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CVariableDeclaration;
 import org.sosy_lab.cpachecker.cfa.model.BlankEdge;
 import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
+import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.cfa.model.FunctionExitNode;
 import org.sosy_lab.cpachecker.cfa.model.c.CAssumeEdge;
 import org.sosy_lab.cpachecker.cfa.model.c.CDeclarationEdge;
@@ -82,7 +86,7 @@ import org.sosy_lab.cpachecker.cpa.constraints.domain.ConstraintsSolver;
 import org.sosy_lab.cpachecker.cpa.constraints.domain.ConstraintsState;
 import org.sosy_lab.cpachecker.cpa.pointer2.PointerState;
 import org.sosy_lab.cpachecker.cpa.rtt.RTTState;
-import org.sosy_lab.cpachecker.cpa.smg2.SMGPrecisionAdjustment.PrecAdjustmentOptions;
+import org.sosy_lab.cpachecker.cpa.smg2.SMGOptions.SMGAbstractionOptions;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGException;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGObjectAndOffsetMaybeNestingLvl;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGSolverException;
@@ -92,16 +96,17 @@ import org.sosy_lab.cpachecker.cpa.smg2.util.value.ValueAndSMGState;
 import org.sosy_lab.cpachecker.cpa.value.symbolic.ConstraintsStrengthenOperator;
 import org.sosy_lab.cpachecker.cpa.value.symbolic.type.AddressExpression;
 import org.sosy_lab.cpachecker.cpa.value.symbolic.type.SymbolicIdentifier;
-import org.sosy_lab.cpachecker.cpa.value.type.BooleanValue;
 import org.sosy_lab.cpachecker.cpa.value.type.NumericValue;
 import org.sosy_lab.cpachecker.cpa.value.type.Value;
 import org.sosy_lab.cpachecker.cpa.value.type.Value.UnknownValue;
 import org.sosy_lab.cpachecker.exceptions.CPATransferException;
 import org.sosy_lab.cpachecker.exceptions.UnsupportedCodeException;
+import org.sosy_lab.cpachecker.util.LoopStructure;
+import org.sosy_lab.cpachecker.util.LoopStructure.Loop;
 import org.sosy_lab.cpachecker.util.Pair;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.ctoformula.CtoFormulaConverter;
+import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.CFormulaEncodingWithPointerAliasingOptions;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.CToFormulaConverterWithPointerAliasing;
-import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.FormulaEncodingWithPointerAliasingOptions;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.TypeHandlerWithPointerAliasing;
 import org.sosy_lab.cpachecker.util.predicates.smt.FormulaManagerView;
 import org.sosy_lab.cpachecker.util.predicates.smt.Solver;
@@ -114,8 +119,7 @@ public class SMGTransferRelation
     extends ForwardingTransferRelation<Collection<SMGState>, SMGState, SMGPrecision> {
 
   private final SMGOptions options;
-
-  private final PrecAdjustmentOptions precisionAdjustmentOptions;
+  private final SMGAbstractionOptions abstractionOptions;
 
   @SuppressWarnings("unused")
   private final SMGCPAExportOptions exportSMGOptions;
@@ -132,6 +136,11 @@ public class SMGTransferRelation
   // (see SMGCPAAssigningValueVisitor). Used to assign boolean concrete values.
   private final Collection<String> booleanVariables;
 
+  // Loop heads do not need to be near assumptions (e.g. do-while, the do is the head, but we want
+  // the condition, which is an outgoing edge!)
+  private final Optional<ImmutableSet<CFANode>> maybeLoopHeads;
+  private final ImmutableSet<CFAEdge> incomingAndOutgoingLoopEdges;
+
   private final @Nullable SMGCPAStatistics stats;
 
   private final ConstraintsSolver solver;
@@ -141,7 +150,6 @@ public class SMGTransferRelation
   public SMGTransferRelation(
       LogManager pLogger,
       SMGOptions pOptions,
-      PrecAdjustmentOptions pPrecisionAdjustmentOptions,
       SMGCPAExportOptions pExportSMGOptions,
       CFA pCfa,
       ConstraintsStrengthenOperator pConstraintsStrengthenOperator,
@@ -151,7 +159,7 @@ public class SMGTransferRelation
     cfa = pCfa;
     logger = new LogManagerWithoutDuplicates(pLogger);
     options = pOptions;
-    precisionAdjustmentOptions = pPrecisionAdjustmentOptions;
+    abstractionOptions = options.getAbstractionOptions();
     exportSMGOptions = pExportSMGOptions;
     solver = pSolver;
 
@@ -164,13 +172,23 @@ public class SMGTransferRelation
     evaluator = pEvaluator;
     constraintsStrengthenOperator = pConstraintsStrengthenOperator;
     stats = pStats;
+    maybeLoopHeads = cfa.getAllLoopHeads();
+    Optional<LoopStructure> loopStructure = cfa.getLoopStructure();
+    ImmutableSet.Builder<CFAEdge> incomingAndOutgoing = ImmutableSet.builder();
+    if (loopStructure.isPresent()) {
+      ImmutableCollection<Loop> allLoops = loopStructure.orElseThrow().getAllLoops();
+      for (Loop loop : allLoops) {
+        incomingAndOutgoing.addAll(loop.getOutgoingEdges());
+        incomingAndOutgoing.addAll(loop.getIncomingEdges());
+      }
+    }
+    incomingAndOutgoingLoopEdges = incomingAndOutgoing.build();
   }
 
   /* For tests only. */
   protected SMGTransferRelation(
       LogManager pLogger,
       SMGOptions pOptions,
-      PrecAdjustmentOptions pPrecisionAdjustmentOptions,
       SMGCPAExportOptions pExportSMGOptions,
       MachineModel pMachineModel,
       Collection<String> pBooleanVariables,
@@ -179,7 +197,7 @@ public class SMGTransferRelation
       throws InvalidConfigurationException {
     logger = new LogManagerWithoutDuplicates(pLogger);
     options = pOptions;
-    precisionAdjustmentOptions = pPrecisionAdjustmentOptions;
+    abstractionOptions = options.getAbstractionOptions();
     exportSMGOptions = pExportSMGOptions;
     booleanVariables = pBooleanVariables;
     constraintsStrengthenOperator = pConstraintsStrengthenOperator;
@@ -189,8 +207,8 @@ public class SMGTransferRelation
         Solver.create(
             Configuration.defaultConfiguration(), pLogger, ShutdownNotifier.createDummy());
     FormulaManagerView formulaManager = smtSolver.getFormulaManager();
-    FormulaEncodingWithPointerAliasingOptions formulaOptions =
-        new FormulaEncodingWithPointerAliasingOptions(Configuration.defaultConfiguration());
+    CFormulaEncodingWithPointerAliasingOptions formulaOptions =
+        new CFormulaEncodingWithPointerAliasingOptions(Configuration.defaultConfiguration());
     TypeHandlerWithPointerAliasing typeHandler =
         new TypeHandlerWithPointerAliasing(logger, pMachineModel, formulaOptions);
 
@@ -208,6 +226,7 @@ public class SMGTransferRelation
     solver =
         new ConstraintsSolver(
             Configuration.defaultConfiguration(),
+            pMachineModel,
             smtSolver,
             formulaManager,
             converter,
@@ -215,6 +234,8 @@ public class SMGTransferRelation
 
     evaluator = pEvaluator;
     cfa = null;
+    maybeLoopHeads = Optional.empty();
+    incomingAndOutgoingLoopEdges = ImmutableSet.of();
   }
 
   @Override
@@ -226,7 +247,7 @@ public class SMGTransferRelation
     ImmutableList.Builder<SMGState> successors = ImmutableList.builder();
     for (SMGState s : pSuccessors) {
       for (CSimpleDeclaration variable : edge.getSuccessor().getOutOfScopeVariables()) {
-        s = s.invalidateVariable(MemoryLocation.forDeclaration(variable));
+        s = s.invalidateVariable(MemoryLocation.forDeclaration(variable), true);
       }
       successors.add(s);
     }
@@ -302,7 +323,7 @@ public class SMGTransferRelation
       SMGCPAValueVisitor vv = new SMGCPAValueVisitor(evaluator, state, returnEdge, logger, options);
       for (ValueAndSMGState returnValueAndState : vv.evaluate(returnExp, retType)) {
         // We get the size per state as it could theoretically change per state (abstraction)
-        BigInteger sizeInBits = evaluator.getBitSizeof(state, retType);
+        Value sizeInBits = evaluator.getBitSizeof(state, retType, returnEdge);
 
         // Iff the target and source are a struct, we need to copy the struct.
         // The value visitor gives us a pointer (singular value) that is then used to find the
@@ -400,7 +421,9 @@ public class SMGTransferRelation
           SMGCPAExpressionEvaluator.getCanonicalType(funcCallExpr.getRightHandSide());
       CType rightValueType =
           SMGCPAExpressionEvaluator.getCanonicalType(funcCallExpr.getRightHandSide());
-      BigInteger sizeInBits = evaluator.getBitSizeof(state, rightValueType);
+      Value sizeInBitsValue = evaluator.getBitSizeof(state, rightValueType, functionReturnEdge);
+      checkState(sizeInBitsValue.isNumericValue());
+      BigInteger sizeInBits = sizeInBitsValue.asNumericValue().bigIntegerValue();
       Optional<SMGObject> returnObject =
           state.getMemoryModel().getReturnObjectForCurrentStackFrame();
       // There should always be a return memory object in the case of a
@@ -414,7 +437,8 @@ public class SMGTransferRelation
         SMGState currentState = state;
 
         for (SMGState stateWithNewVar :
-            createVariableOnTheSpotForPreviousStackframe(leftValue, currentState)) {
+            createVariableOnTheSpotForPreviousStackframe(
+                leftValue, currentState, functionReturnEdge)) {
           Preconditions.checkArgument(leftValue instanceof CIdExpression);
           String leftHandSideVarName =
               ((CIdExpression) leftValue).getDeclaration().getQualifiedName();
@@ -443,7 +467,8 @@ public class SMGTransferRelation
           // Now we can drop the stack frame as we left the function and have the return value
           SMGState currentState = readValueAndState.getState().dropStackFrame();
           // The memory on the left hand side might not exist because of CEGAR
-          for (SMGState stateWithNewVar : createVariableOnTheSpot(leftValue, currentState)) {
+          for (SMGState stateWithNewVar :
+              createVariableOnTheSpot(leftValue, currentState, functionReturnEdge)) {
             stateBuilder.addAll(
                 evaluator.writeValueToExpression(
                     summaryEdge, leftValue, readValueAndState.getValue(), stateWithNewVar));
@@ -457,7 +482,7 @@ public class SMGTransferRelation
   }
 
   private List<SMGState> createVariableOnTheSpotForPreviousStackframe(
-      CExpression leftHandSideExpr, SMGState pState) throws CPATransferException {
+      CExpression leftHandSideExpr, SMGState pState, CFAEdge pEdge) throws CPATransferException {
     // TODO: move this method to the state
     // Remove top stackframe
     PersistentStack<StackFrame> completeStack = pState.getMemoryModel().getStackFrames();
@@ -468,7 +493,7 @@ public class SMGTransferRelation
 
     // Create variable on the stack below
     ImmutableList.Builder<SMGState> returnListBuilder = ImmutableList.builder();
-    for (SMGState stateWVar : createVariableOnTheSpot(leftHandSideExpr, tempState)) {
+    for (SMGState stateWVar : createVariableOnTheSpot(leftHandSideExpr, tempState, pEdge)) {
       // Restore the stack
       PersistentStack<StackFrame> incompleteStack = stateWVar.getMemoryModel().getStackFrames();
       PersistentStack<StackFrame> newCompleteStack = incompleteStack.pushAndCopy(topStackframe);
@@ -489,48 +514,46 @@ public class SMGTransferRelation
    * @return a new SMGState with the variable added.
    * @throws CPATransferException for errors and unhandled cases
    */
-  private List<SMGState> createVariableOnTheSpot(CExpression leftHandSideExpr, SMGState pState)
-      throws CPATransferException {
-    if (leftHandSideExpr instanceof CIdExpression leftCIdExpr) {
-      CSimpleDeclaration decl = leftCIdExpr.getDeclaration();
-      String varName = decl.getQualifiedName();
-      SMGState currentState = pState;
-      // The orElse(true) skips the call on purpose!
-      if (pState.isLocalOrGlobalVariablePresent(varName)
-          && !pState.isLocalOrGlobalVariableValid(varName).orElse(true)) {
-        currentState = pState.copyAndRemoveStackVariable(varName);
-      }
-      if (!currentState.isLocalOrGlobalVariablePresent(varName)) {
-        if (decl instanceof CVariableDeclaration) {
-          return evaluator.handleVariableDeclarationWithoutInizializer(
-              currentState, (CVariableDeclaration) decl);
-        } else if (decl instanceof CParameterDeclaration) {
-          return evaluator.handleVariableDeclarationWithoutInizializer(
-              currentState, ((CParameterDeclaration) decl).asVariableDeclaration());
+  private List<SMGState> createVariableOnTheSpot(
+      CExpression leftHandSideExpr, SMGState pState, CFAEdge pEdge) throws CPATransferException {
+    return switch (leftHandSideExpr) {
+      case CIdExpression leftCIdExpr -> {
+        CSimpleDeclaration decl = leftCIdExpr.getDeclaration();
+        String varName = decl.getQualifiedName();
+        SMGState currentState = pState;
+        // The orElse(true) skips the call on purpose!
+        if (pState.isLocalOrGlobalVariablePresent(varName)
+            && !pState.isLocalOrGlobalVariableValid(varName).orElse(true)) {
+          currentState = pState.copyAndRemoveStackVariable(varName);
         }
+        if (!currentState.isLocalOrGlobalVariablePresent(varName)) {
+          if (decl instanceof CVariableDeclaration cVariableDeclaration) {
+            yield evaluator.handleVariableDeclarationWithoutInitializer(
+                currentState, cVariableDeclaration, pEdge);
+          } else if (decl instanceof CParameterDeclaration cParameterDeclaration) {
+            yield evaluator.handleVariableDeclarationWithoutInitializer(
+                currentState, cParameterDeclaration.asVariableDeclaration(), pEdge);
+          }
+        }
+        yield ImmutableList.of(pState);
       }
-      return ImmutableList.of(pState);
+      case CArraySubscriptExpression cArraySubscriptExpression ->
+          createVariableOnTheSpot(cArraySubscriptExpression.getArrayExpression(), pState, pEdge);
 
-    } else if (leftHandSideExpr instanceof CArraySubscriptExpression) {
-      CExpression arrayExpr = ((CArraySubscriptExpression) leftHandSideExpr).getArrayExpression();
-      return createVariableOnTheSpot(arrayExpr, pState);
+      case CFieldReference cFieldReference ->
+          createVariableOnTheSpot(cFieldReference.getFieldOwner(), pState, pEdge);
 
-    } else if (leftHandSideExpr instanceof CFieldReference) {
-      CExpression fieldOwn = ((CFieldReference) leftHandSideExpr).getFieldOwner();
-      return createVariableOnTheSpot(fieldOwn, pState);
+      case CPointerExpression cPointerExpression ->
+          createVariableOnTheSpot(cPointerExpression.getOperand(), pState, pEdge);
 
-    } else if (leftHandSideExpr instanceof CPointerExpression) {
-      CExpression operand = ((CPointerExpression) leftHandSideExpr).getOperand();
-      return createVariableOnTheSpot(operand, pState);
+      case CUnaryExpression cUnaryExpression ->
+          createVariableOnTheSpot(cUnaryExpression.getOperand(), pState, pEdge);
 
-    } else if (leftHandSideExpr instanceof CUnaryExpression) {
-      CExpression operand = ((CUnaryExpression) leftHandSideExpr).getOperand();
-      return createVariableOnTheSpot(operand, pState);
-    } else if (leftHandSideExpr instanceof CCastExpression) {
-      CExpression operand = ((CCastExpression) leftHandSideExpr).getOperand();
-      return createVariableOnTheSpot(operand, pState);
-    }
-    return ImmutableList.of(pState);
+      case CCastExpression cCastExpression ->
+          createVariableOnTheSpot(cCastExpression.getOperand(), pState, pEdge);
+
+      case null /*TODO check if null is necessary*/, default -> ImmutableList.of(pState);
+    };
   }
 
   @Override
@@ -591,15 +614,17 @@ public class SMGTransferRelation
         parameterType = SMGCPAExpressionEvaluator.getCanonicalType(paramDecl.get(i));
       } else {
         // Remember overall size of varArgs
+        Value typeSizeInBits = evaluator.getBitSizeof(currentState, cParamExp, callEdge);
+        checkState(typeSizeInBits.isNumericValue());
         overallVarArgsSizeInBits =
-            overallVarArgsSizeInBits.add(evaluator.getBitSizeof(currentState, cParamExp));
+            overallVarArgsSizeInBits.add(typeSizeInBits.asNumericValue().bigIntegerValue());
       }
 
       ValueAndSMGState valueAndState;
       if (parameterType instanceof CPointerType && argumentType instanceof CArrayType) {
         if (cParamExp instanceof CStringLiteralExpression stringExpr) {
           // For example: print("string"); does not create a String constant beforehand
-          String stringName = evaluator.getCStringLiteralExpressionVairableName(stringExpr);
+          String stringName = currentState.getCStringLiteralExpressionVariableName(stringExpr);
           if (!currentState.isLocalOrGlobalVariablePresent(stringName)) {
             // If s String literal is part of varArgs, we don't have a variable decl
             List<SMGState> statesWithString =
@@ -613,7 +638,7 @@ public class SMGTransferRelation
                     callEdge.getFileLocation(),
                     stringExpr);
             Preconditions.checkArgument(statesWithString.size() == 1);
-            currentState = statesWithString.get(0);
+            currentState = statesWithString.getFirst();
           }
         }
         // Implicit & on the array expr
@@ -621,7 +646,7 @@ public class SMGTransferRelation
             evaluator.createAddress(cParamExp, currentState, callEdge);
 
         Preconditions.checkArgument(addressesAndStates.size() == 1);
-        valueAndState = addressesAndStates.get(0);
+        valueAndState = addressesAndStates.getFirst();
       } else {
         // Evaluate the CExpr into a Value
         // Note: this evaluates local arrays into pointers!!!!!
@@ -632,7 +657,7 @@ public class SMGTransferRelation
         // If this ever fails; we need to take all states/values into account, meaning we would need
         // to proceed from this point onwards with all of them with all following operations
         Preconditions.checkArgument(valuesAndStates.size() == 1);
-        valueAndState = valuesAndStates.get(0);
+        valueAndState = valuesAndStates.getFirst();
       }
       readValuesInOrderBuilder.add(valueAndState.getValue());
       currentState = valueAndState.getState();
@@ -682,16 +707,17 @@ public class SMGTransferRelation
       throws CPATransferException {
 
     SMGState currentState = pCurrentState;
-    if ((valueType instanceof CArrayType && cParamType instanceof CArrayType)
-        || (valueType instanceof CPointerType && cParamType instanceof CArrayType)) {
+    if ((valueType instanceof CArrayType || valueType instanceof CPointerType)
+        && cParamType instanceof CArrayType) {
       if (paramValue instanceof AddressExpression addrParam) {
-        // For pointer -> array we get a addressExpr that wraps the pointer
+        // For pointer -> array we get an addressExpr that wraps the pointer
 
         // We don't support symbolic pointer arithmetics yet
-        if (!addrParam.getOffset().asNumericValue().bigIntegerValue().equals(BigInteger.ZERO)) {
+        if (!(addrParam.getOffset() instanceof NumericValue numAddrParamOffset)
+            || !numAddrParamOffset.bigIntegerValue().equals(BigInteger.ZERO)) {
           // UNKNOWN as we can't handle symbolic or non-zero offsets right now
           // TODO: implement either a workaround for pointers with offset to a memory region or
-          // switch to pointers for arrays per default
+          //  switch to pointers for arrays per default
           throw new SMGException(
               "Usage of symbolic or non-zero offsets for pointer targets in function arguments for"
                   + " pointer to array assignment not supported at the moment: "
@@ -704,19 +730,14 @@ public class SMGTransferRelation
       List<SMGStateAndOptionalSMGObjectAndOffset> knownMemoriesAndStates =
           currentState.dereferencePointer(paramValue);
       Preconditions.checkArgument(knownMemoriesAndStates.size() == 1);
-      SMGStateAndOptionalSMGObjectAndOffset knownMemoryAndState = knownMemoriesAndStates.get(0);
+      SMGStateAndOptionalSMGObjectAndOffset knownMemoryAndState = knownMemoriesAndStates.getFirst();
       currentState = knownMemoryAndState.getSMGState();
       if (!knownMemoryAndState.hasSMGObjectAndOffset()) {
         throw new SMGException("Could not associate a local array in a new function.");
-      } else if (knownMemoryAndState.getOffsetForObject().isNumericValue()
-          && knownMemoryAndState
-                  .getOffsetForObject()
-                  .asNumericValue()
-                  .bigIntegerValue()
-                  .compareTo(BigInteger.ZERO)
-              != 0) {
+      } else if (knownMemoryAndState.getOffsetForObject() instanceof NumericValue knownMemoryOffset
+          && knownMemoryOffset.bigIntegerValue().compareTo(BigInteger.ZERO) != 0) {
         throw new SMGException("Could not associate a local array in a new function.");
-      } else if (!knownMemoryAndState.getOffsetForObject().isNumericValue()) {
+      } else if (!(knownMemoryAndState.getOffsetForObject() instanceof NumericValue)) {
         throw new SMGException("Could not associate a local array in a new function.");
       }
       // arrays don't get copied! They are handled via pointers.
@@ -741,21 +762,21 @@ public class SMGTransferRelation
 
         // Nothing can materialize here
         Preconditions.checkArgument(derefedPointerOffsetAndState.size() == 1);
-        currentState = derefedPointerOffsetAndState.get(0).getSMGState();
+        currentState = derefedPointerOffsetAndState.getFirst().getSMGState();
 
-        if (!derefedPointerOffsetAndState.get(0).hasSMGObjectAndOffset()) {
+        if (!derefedPointerOffsetAndState.getFirst().hasSMGObjectAndOffset()) {
           throw new SMGException("Usage of unknown variable in function " + callEdge);
         }
 
-        Value offsetForObject = derefedPointerOffsetAndState.get(0).getOffsetForObject();
-        if (!offsetForObject.isNumericValue()) {
+        Value offsetForObject = derefedPointerOffsetAndState.getFirst().getOffsetForObject();
+        if (!(offsetForObject instanceof NumericValue numOffsetForObject)) {
           throw new SMGException(
               "Usage of symbolic offsets in function arguments for structs not supported at the"
                   + " moment. "
                   + callEdge);
         }
-        offsetSource = offsetForObject.asNumericValue().bigIntegerValue();
-        memorySource = derefedPointerOffsetAndState.get(0).getSMGObject();
+        offsetSource = numOffsetForObject.bigIntegerValue();
+        memorySource = derefedPointerOffsetAndState.getFirst().getSMGObject();
         sizeOfNewVariable = evaluator.subtractBitOffsetValues(memorySource.getSize(), offsetSource);
 
       } else if (paramValue instanceof SymbolicIdentifier symbParamValue) {
@@ -818,12 +839,8 @@ public class SMGTransferRelation
     // always be a CBinaryExpression.
     // We also might learn something by assuming symbolic or unknown values based on known values
     try {
-      Collection<SMGState> handledAssumptions =
-          handleAssumption(expression, cfaEdge, truthAssumption);
-      if (handledAssumptions == null || handledAssumptions.isEmpty()) {
-        return null;
-      }
-      return handledAssumptions;
+      return handleAssumption(expression, cfaEdge, truthAssumption);
+
     } catch (SMGSolverException e) {
       if (e.isSolverException()) {
         throw new CPATransferException(
@@ -842,7 +859,7 @@ public class SMGTransferRelation
     }
   }
 
-  private @Nullable Collection<SMGState> handleAssumption(
+  private Collection<SMGState> handleAssumption(
       AExpression expression, CFAEdge cfaEdge, boolean truthValue)
       throws CPATransferException, SolverException, InterruptedException {
 
@@ -855,15 +872,22 @@ public class SMGTransferRelation
     CExpression cExpression = (CExpression) simplifiedExpression.getFirst();
     truthValue = simplifiedExpression.getSecond();
 
+    // TODO: add option to only return proofs once we abstracted one,
+    //   as this is only a fix for certain cases, but not in general!
     if (expression instanceof CBinaryExpression binEx
-        && binEx.getOperand2() instanceof CIntegerLiteralExpression loopBound) {
+        && (incomingAndOutgoingLoopEdges.contains(cfaEdge)
+            || (maybeLoopHeads.isPresent()
+                && maybeLoopHeads.orElseThrow().contains(cfaEdge.getPredecessor())))
+        && binEx.getOperand2() instanceof CIntegerLiteralExpression loopBound
+        && loopBound.getValue().bitCount() <= 32) {
       if (binEx.getOperator().equals(LESS_THAN) || binEx.getOperator().equals(LESS_EQUAL)) {
+        // TODO: add option and extract to method
         // Concrete loop of the form x < 5, increment abstraction bound to 1 larger than loop
-        if (precisionAdjustmentOptions.getListAbstractionMinimumLengthThreshold()
+        if (abstractionOptions.getListAbstractionMinimumLengthThreshold()
                 <= loopBound.getValue().intValueExact()
-            && precisionAdjustmentOptions.getListAbstractionMinimumLengthThreshold()
-                < precisionAdjustmentOptions.getListAbstractionMaximumIncreaseLengthThreshold()) {
-          precisionAdjustmentOptions.incListAbstractionMinimumLengthThreshold();
+            && abstractionOptions.getListAbstractionMinimumLengthThreshold()
+                < abstractionOptions.getListAbstractionMaximumIncreaseLengthThreshold()) {
+          abstractionOptions.incListAbstractionMinimumLengthThreshold();
         }
       }
     }
@@ -899,12 +923,24 @@ public class SMGTransferRelation
                 functionName);
         try {
           List<ValueAndSMGState> maybeFeasiblePaths = cExpression.accept(avv);
-          if (maybeFeasiblePaths == null) {
-            // Infeasible
-            return null;
+          if (maybeFeasiblePaths != null && !maybeFeasiblePaths.isEmpty()) {
+            // Feasible
+            resultStateBuilder.addAll(
+                transformedImmutableListCopy(maybeFeasiblePaths, ValueAndSMGState::getState));
           }
-          return transformedImmutableListCopy(maybeFeasiblePaths, ValueAndSMGState::getState);
+          // } else { Assumption not fulfilled }
+
         } catch (SMGSolverException e) {
+          // This might happen while we already have valid result states
+          // TODO: how to handle these cases? Option that allows/disallows?
+          if (!resultStateBuilder.build().isEmpty()) {
+            // This only checks fulfilled assumptions, but ignores not-fulfilled
+            logger.log(
+                Level.WARNING,
+                () ->
+                    "Exception when handling assumptions, but fulfilled assumptions have been found"
+                        + " already");
+          }
           if (e.isSolverException()) {
             throw e.getSolverException();
           } else {
@@ -914,46 +950,30 @@ public class SMGTransferRelation
         }
 
       } else if (representsBoolean(value, truthValue)) {
-        // We do not know more than before, and the assumption is fulfilled, so return the state
-        // from the value visitor (we don't need a copy as every state operation generates a new
-        // state and never modifies the old state)
+        // The assumption is fulfilled, but we do not know more than before, return the state
+        // from the value visitor
         resultStateBuilder.add(currentState);
-
-      } else {
-        // Assumption not fulfilled
-        return null;
       }
+      // } else { Assumption not fulfilled }
+
     }
     return resultStateBuilder.build();
   }
 
-  /*
-   *  returns 'true' if the given value represents the specified boolean bool.
-   *  A return of 'false' does not necessarily mean that the given value represents !bool,
-   *  but only that it does not represent bool.
-   *
-   *  For example:
-   *    * representsTrue(BooleanValue.valueOf(true), true)  = true
-   *    * representsTrue(BooleanValue.valueOf(false), true) = false
-   *  but:
-   *    * representsTrue(NullValue.getInstance(), true)     = false
-   *    * representsTrue(NullValue.getInstance(), false)    = false
-   *
+  /**
+   * Returns 'true' if the given value represents the specified boolean value in the C programming
+   * language.
    */
   private boolean representsBoolean(Value value, boolean bool) {
-    if (value instanceof BooleanValue) {
-      return ((BooleanValue) value).isTrue() == bool;
-
-    } else if (value.isNumericValue()) {
+    if (value instanceof NumericValue numericValue) {
+      boolean numericIsZero = numericValue.bigIntegerValue().compareTo(BigInteger.ZERO) == 0;
       if (bool) {
-        return value.asNumericValue().longValue() == 1L;
+        return !numericIsZero;
       } else {
-        return value.asNumericValue().longValue() == 0L;
+        return numericIsZero;
       }
-
-    } else {
-      return false;
     }
+    return false;
   }
 
   @Override
@@ -966,7 +986,7 @@ public class SMGTransferRelation
       CExpression lValue = cAssignment.getLeftHandSide();
       CRightHandSide rValue = cAssignment.getRightHandSide();
       ImmutableList.Builder<SMGState> stateBuilder = ImmutableList.builder();
-      for (SMGState currentState : createVariableOnTheSpot(lValue, state)) {
+      for (SMGState currentState : createVariableOnTheSpot(lValue, state, pCfaEdge)) {
         stateBuilder.addAll(handleAssignment(currentState, pCfaEdge, lValue, rValue));
       }
       return stateBuilder.build();
@@ -977,60 +997,81 @@ public class SMGTransferRelation
       CExpression fileNameExpression = cFCExpression.getFunctionNameExpression();
       String calledFunctionName = fileNameExpression.toASTString();
 
-      ImmutableList.Builder<SMGState> resultStatesBuilder = ImmutableList.builder();
+      List<ValueAndSMGState> handledFunReturn =
+          evaluator
+              .getBuiltinFunctionHandler()
+              .handleFunctionCallWithoutBody(cFCExpression, calledFunctionName, state, pCfaEdge);
 
-      // function calls without assignments
-      resultStatesBuilder.addAll(
-          handleFunctionCallWithoutBody(state, pCfaEdge, cFCExpression, calledFunctionName));
+      // Memory allocating function calls that need to be freed without remembering the pointer
+      // leads to memory-leaks. Speed up this process.
+      handledFunReturn =
+          postprocessBuiltinCFunctionWithoutReturn(handledFunReturn, pCfaEdge, calledFunctionName);
 
-      return resultStatesBuilder.build();
+      return transformedImmutableListCopy(handledFunReturn, ValueAndSMGState::getState);
+
     } else {
       // Fall through for unneeded cases
       return ImmutableList.of(state);
     }
   }
 
-  /*
-   * Function calls without assignment only. Checks the arguments for validity!
-   * The split up of the methods used helps with better errors.
+  /**
+   * Post-processes C builtin function calls without subsequent assignments. Shortcuts errors for
+   * memory allocating functions and returns them with memory-leaks, as their pointers can never be
+   * freed. Other function calls are handled normally. Expects the input states to already have the
+   * functions handled, and the values being the return values of the functions.
    */
-  private Collection<SMGState> handleFunctionCallWithoutBody(
-      SMGState pState,
+  private List<ValueAndSMGState> postprocessBuiltinCFunctionWithoutReturn(
+      List<ValueAndSMGState> statesWithHandledFunctions,
       CStatementEdge pCfaEdge,
-      CFunctionCallExpression cFCExpression,
       String calledFunctionName)
       throws CPATransferException {
-    SMGCPABuiltins builtins = evaluator.getBuiltinFunctionHandler();
-    List<ValueAndSMGState> uselessValuesAndStates;
-    if (builtins.isABuiltIn(calledFunctionName)) {
-      if (builtins.isConfigurableAllocationFunction(calledFunctionName)) {
-        ImmutableList.Builder<SMGState> newStatesBuilder = ImmutableList.builder();
-        String errorMSG =
-            "Calling " + functionName + " and not using the return value results in a memory leak.";
-        logger.logf(Level.INFO, "Error in %s: %s", errorMSG, pCfaEdge.getFileLocation());
-        List<ValueAndSMGState> uselessValuesAndNewStates =
-            builtins.evaluateConfigurableAllocationFunction(
-                cFCExpression, calledFunctionName, pState, pCfaEdge);
-        for (ValueAndSMGState valueAndState : uselessValuesAndNewStates) {
-          newStatesBuilder.add(
-              valueAndState
-                  .getState()
-                  .withMemoryLeak(errorMSG, ImmutableList.of(valueAndState.getValue())));
+
+    if (isMemoryAllocatingFunction(calledFunctionName)) {
+      // Shortcut to faster errors
+      ImmutableList.Builder<ValueAndSMGState> newReturnBuilder = ImmutableList.builder();
+      String errorMSG =
+          "Calling "
+              + calledFunctionName
+              + " and not using the return value, results in a memory-leak at "
+              + pCfaEdge;
+
+      for (ValueAndSMGState valueAndState : statesWithHandledFunctions) {
+        Value funReturn = valueAndState.getValue();
+        SMGState funReturnState = valueAndState.getState();
+
+        if (funReturn instanceof NumericValue numRet
+            && numRet.bigIntegerValue().equals(BigInteger.ZERO)) {
+          // 0 returns do not need freeing
+          newReturnBuilder.add(valueAndState);
+        } else if (funReturnState.isPointer(funReturn)) {
+          // Valid pointer returned, this needs to be freed, but can't be freed as the pointer will
+          // be lost
+          logger.logf(
+              Level.INFO,
+              "Called memory allocating C function %s() that needs freeing, but did not assign the"
+                  + " returned value %s; memory-leak assumed following %s",
+              funReturn,
+              calledFunctionName,
+              pCfaEdge);
+
+          newReturnBuilder.add(
+              ValueAndSMGState.of(funReturn, funReturnState.withMemoryLeak(errorMSG, funReturn)));
+
+        } else {
+          throw new SMGException(
+              "Error: unexpected return value "
+                  + funReturn
+                  + " encountered in post-processing of function call to "
+                  + functionName
+                  + "() without assigning the functions return value at "
+                  + pCfaEdge);
         }
-        return newStatesBuilder.build();
       }
-      if (builtins.isDeallocationFunction(calledFunctionName)) {
-        return builtins.evaluateFree(cFCExpression, pState, pCfaEdge);
-      } else {
-        uselessValuesAndStates =
-            builtins.handleBuiltinFunctionCall(pCfaEdge, cFCExpression, calledFunctionName, pState);
-      }
-    } else {
-      // Check arguments for unknown functions without body
-      uselessValuesAndStates =
-          builtins.handleUnknownFunction(pCfaEdge, cFCExpression, calledFunctionName, pState);
+      return newReturnBuilder.build();
     }
-    return transformedImmutableListCopy(uselessValuesAndStates, ValueAndSMGState::getState);
+
+    return statesWithHandledFunctions;
   }
 
   @Override
@@ -1046,8 +1087,7 @@ public class SMGTransferRelation
           // Init main parameters if there are any
           for (CParameterDeclaration parameters : cFuncDecl.getParameters()) {
             CType paramType = SMGCPAExpressionEvaluator.getCanonicalType(parameters.getType());
-            Value paramSizeInBits =
-                new NumericValue(evaluator.getBitSizeof(currentState, paramType));
+            Value paramSizeInBits = evaluator.getBitSizeof(currentState, paramType, edge);
             if (paramType instanceof CPointerType || paramType instanceof CArrayType) {
               currentState =
                   currentState.copyAndAddLocalVariable(
@@ -1070,7 +1110,7 @@ public class SMGTransferRelation
       try {
         return evaluator.handleVariableDeclaration(currentState, cVarDecl, edge);
       } catch (UnsupportedOperationException e) {
-        // Since we lose the cfa edge (and the CExpression for other cases) we can not throw this in
+        // Since we lose the CFA edge (and the CExpression for other cases) we can not throw this in
         // the method directly
         throw new UnsupportedCodeException(e.getMessage(), edge);
       }
@@ -1102,12 +1142,12 @@ public class SMGTransferRelation
         }
         toStrengthen.clear();
         toStrengthen.addAll(result);
-      } else if (ae instanceof AbstractStateWithAssumptions) {
+      } else if (ae instanceof AbstractStateWithAssumptions stateWithAssumptions) {
         try {
           result.clear();
           for (SMGState stateToStrengthen : toStrengthen) {
             super.setInfo(element, pPrecision, cfaEdge);
-            AbstractStateWithAssumptions stateWithAssumptions = (AbstractStateWithAssumptions) ae;
+
             result.addAll(
                 strengthenWithAssumptions(stateWithAssumptions, stateToStrengthen, cfaEdge));
           }
@@ -1194,22 +1234,22 @@ public class SMGTransferRelation
       SMGObject addressToWriteTo = targetAndOffsetAndState.getSMGObject();
       Value offsetToWriteTo = targetAndOffsetAndState.getOffsetForObject();
 
-      if (rValue instanceof CStringLiteralExpression
+      if (rValue instanceof CStringLiteralExpression cStringLiteralExpression
           && leftHandSideType instanceof CPointerType
           && rightHandSideType instanceof CArrayType
-          && lValue instanceof CIdExpression) {
+          && lValue instanceof CIdExpression cIdExpression) {
         // Assignment of a String pointer to an existing variable with a not yet existing String
         // Create the String, get the address, save address to left hand side var
         returnStateBuilder.addAll(
             evaluator.handleStringInitializer(
                 currentState,
-                (CVariableDeclaration) ((CIdExpression) lValue).getDeclaration(),
+                (CVariableDeclaration) cIdExpression.getDeclaration(),
                 cfaEdge,
-                ((CIdExpression) lValue).getDeclaration().getQualifiedName(),
+                cIdExpression.getDeclaration().getQualifiedName(),
                 offsetToWriteTo,
                 lValue.getExpressionType(),
                 cfaEdge.getFileLocation(),
-                (CStringLiteralExpression) rValue));
+                cStringLiteralExpression));
         continue;
       } else if (leftHandSideType instanceof CPointerType
           && rightHandSideType instanceof CArrayType) {
@@ -1217,8 +1257,7 @@ public class SMGTransferRelation
         for (ValueAndSMGState addressAndState :
             evaluator.createAddress(rValue, currentState, cfaEdge)) {
 
-          Value sizeOfTypeLeft =
-              new NumericValue(evaluator.getBitSizeof(currentState, leftHandSideType));
+          Value sizeOfTypeLeft = evaluator.getBitSizeof(currentState, leftHandSideType, cfaEdge);
           Value addressToAssign = addressAndState.getValue();
           currentState = addressAndState.getState();
 
@@ -1234,7 +1273,7 @@ public class SMGTransferRelation
         continue;
       }
 
-      // The right hand side either returns Values representing values or a AddressExpression. In
+      // The right hand side either returns Values representing values or an AddressExpression. In
       // the later case this means the entire structure behind it needs to be copied as C is
       // pass-by-value.
       SMGCPAValueVisitor vv =
@@ -1275,7 +1314,7 @@ public class SMGTransferRelation
     SMGState currentState = pCurrentState;
 
     // Size of the left hand side as vv.evaluate() casts automatically to this type
-    Value sizeInBits = new NumericValue(evaluator.getBitSizeof(currentState, leftHandSideType));
+    Value sizeInBits = evaluator.getBitSizeof(currentState, leftHandSideType, edge);
 
     if (valueToWrite instanceof SymbolicIdentifier
         && ((SymbolicIdentifier) valueToWrite).getRepresentedLocation().isPresent()) {
@@ -1290,16 +1329,20 @@ public class SMGTransferRelation
               offsetToWriteToInBits,
               currentState));
 
-    } else if (valueToWrite instanceof AddressExpression) {
+    } else if (valueToWrite instanceof AddressExpression addressInValue) {
       if (SMGCPAExpressionEvaluator.isStructOrUnionType(rightHandSideType)) {
         Preconditions.checkArgument(
             rightHandSideType.equals(leftHandSideType)
                 || rightHandSideType.canBeAssignedFrom(leftHandSideType));
         // This is a copy based on a pointer
-        AddressExpression addressInValue = (AddressExpression) valueToWrite;
         Value pointerOffset = addressInValue.getOffset();
-        if (!pointerOffset.isNumericValue()) {
-          // Write unknown to left
+        if (!(pointerOffset instanceof NumericValue numPointerOffset)) {
+          // Write unknown to left due to symbolic/unknown offset
+          //  => copy start can not be determined
+          currentState.logUnknownValue(
+              "Writing unknown value(s) due to unknown or symbolic offset in memory copy operation"
+                  + " for struct/union type in: ",
+              edge);
           return ImmutableList.of(
               currentState.writeValueWithChecks(
                   addressToWriteTo,
@@ -1309,7 +1352,7 @@ public class SMGTransferRelation
                   leftHandSideType,
                   edge));
         }
-        BigInteger baseOffsetFromPointer = pointerOffset.asNumericValue().bigIntegerValue();
+        BigInteger baseOffsetFromPointer = numPointerOffset.bigIntegerValue();
 
         Value properPointer;
         // We need a true pointer without AddressExpr
@@ -1319,12 +1362,15 @@ public class SMGTransferRelation
         } else {
           // Offset known but not 0, search for/create the correct address
           List<ValueAndSMGState> newAddressesAndStates =
-              evaluator.findOrcreateNewPointer(
-                  addressInValue.getMemoryAddress(), addressInValue.getOffset(), currentState);
+              evaluator.findOrCreateNewPointer(
+                  addressInValue.getMemoryAddress(),
+                  addressInValue.getOffset(),
+                  rightHandSideType,
+                  currentState);
 
           // Very unlikely that a 0+ list abstraction gets materialized here
           Preconditions.checkArgument(newAddressesAndStates.size() == 1);
-          ValueAndSMGState newAddressAndState = newAddressesAndStates.get(0);
+          ValueAndSMGState newAddressAndState = newAddressesAndStates.getFirst();
           currentState = newAddressAndState.getState();
           properPointer = newAddressAndState.getValue();
         }
@@ -1351,33 +1397,37 @@ public class SMGTransferRelation
       } else {
         // Genuine pointer that needs to be written
         // Retranslate into a pointer and write the pointer
-        AddressExpression addressInValue = (AddressExpression) valueToWrite;
-        if (addressInValue.getOffset().isNumericValue()
-            && addressInValue.getOffset().asNumericValue().longValue() == 0) {
+        if (addressInValue.getOffset() instanceof NumericValue addressInValueOffset
+            && addressInValueOffset.longValue() == 0) {
           // offset == 0 -> write the value directly (known pointer)
           valueToWrite = addressInValue.getMemoryAddress();
-        } else if (addressInValue.getOffset().isNumericValue() || options.trackPredicates()) {
+        } else if (addressInValue.getOffset() instanceof NumericValue
+            || options.trackPredicates()) {
           // Offset known but not 0, search for/create the correct address
           List<ValueAndSMGState> newAddressesAndStates =
-              evaluator.findOrcreateNewPointer(
-                  addressInValue.getMemoryAddress(), addressInValue.getOffset(), currentState);
+              evaluator.findOrCreateNewPointer(
+                  addressInValue.getMemoryAddress(),
+                  addressInValue.getOffset(),
+                  rightHandSideType,
+                  currentState);
 
           // Very unlikely that a 0+ list abstraction gets materialized here
           Preconditions.checkArgument(newAddressesAndStates.size() == 1);
-          ValueAndSMGState newAddressAndState = newAddressesAndStates.get(0);
+          ValueAndSMGState newAddressAndState = newAddressesAndStates.getFirst();
           currentState = newAddressAndState.getState();
           valueToWrite = newAddressAndState.getValue();
         } else {
-          // Offset unknown/symbolic. This is not usable!
+          // Offset unknown or symbolic (in value analysis only). This is not usable!
+          // TODO: always build/use symbolics. Value can at least check ==
+          currentState.logUnknownValue(
+              "Writing unknown value(s) due to "
+                  + (options.trackPredicates() ? "unknown " : "unknown or symbolic")
+                  + "offset of a pointer that is supposed to be saved: ",
+              edge);
           valueToWrite = UnknownValue.getInstance();
         }
         Preconditions.checkArgument(
-            sizeInBits.isNumericValue()
-                && sizeInBits
-                        .asNumericValue()
-                        .bigIntegerValue()
-                        .compareTo(evaluator.getBitSizeof(currentState, leftHandSideType))
-                    == 0);
+            sizeInBits.equals(evaluator.getBitSizeof(currentState, leftHandSideType, edge)));
 
         return ImmutableList.of(
             currentState.writeValueWithChecks(
