@@ -136,7 +136,7 @@ class AssignmentQuantifierHandler {
    */
   private static final UniqueIdGenerator ENCODED_VARIABLE_NUMBER = new UniqueIdGenerator();
 
-  private final FormulaEncodingWithPointerAliasingOptions options;
+  private final CFormulaEncodingWithPointerAliasingOptions options;
   private final FormulaManagerView fmgr;
   private final BooleanFormulaManagerView bfmgr;
 
@@ -341,14 +341,12 @@ class AssignmentQuantifierHandler {
 
         CExpression baseUnderlying = base.getOperand();
 
-        if (!(baseUnderlying instanceof CIntegerLiteralExpression)) {
+        if (!(baseUnderlying instanceof CIntegerLiteralExpression setValueLiteral)) {
           throw new UnrecognizedCodeException(
               "Non-literal byte repeat value not supported for bitfields", edge);
         }
 
         // determine the value of literal
-        final CIntegerLiteralExpression setValueLiteral =
-            (CIntegerLiteralExpression) baseUnderlying;
 
         // make sure it is either all-zeros or all-ones
         int unsignedCharAllOnes =
@@ -393,7 +391,7 @@ class AssignmentQuantifierHandler {
     }
 
     // not all variables have been quantified, get the variable to quantify
-    final SliceVariable variableToQuantify = variablesToQuantify.get(0);
+    final SliceVariable variableToQuantify = variablesToQuantify.getFirst();
 
     // make a sublist without the variable to quantify
     final ImmutableList<SliceVariable> nextVariablesToQuantify =
@@ -452,7 +450,7 @@ class AssignmentQuantifierHandler {
    * calls {@link #quantifyAssignments(PartialAssignment, ImmutableList, BooleanFormula, boolean)}
    * recursively.
    *
-   * @param assignment The the simple partial slice assignment to quantify.
+   * @param assignment the simple partial slice assignment to quantify.
    * @param nextVariablesToQuantify Remaining variables that need to be quantified, without the one
    *     to currently encode. Each variable which still needs to be quantified, except the one to
    *     currently encode, must appear in this list exactly once.
@@ -468,7 +466,7 @@ class AssignmentQuantifierHandler {
       throws UnrecognizedCodeException, InterruptedException {
 
     // the encoded quantified variable should be of pointerAsUnsignedIntType
-    final FormulaType<?> sizeFormulaType = conv.getFormulaTypeFromCType(pointerAsUnsignedIntType);
+    final FormulaType<?> sizeFormulaType = conv.getFormulaTypeFromType(pointerAsUnsignedIntType);
 
     // create encoded quantified variable
     final Formula encodedVariable =
@@ -524,7 +522,7 @@ class AssignmentQuantifierHandler {
       throws UnrecognizedCodeException, InterruptedException {
 
     // the unrolled index should be of pointerAsUnsignedIntType
-    final FormulaType<?> sizeFormulaType = conv.getFormulaTypeFromCType(pointerAsUnsignedIntType);
+    final FormulaType<?> sizeFormulaType = conv.getFormulaTypeFromType(pointerAsUnsignedIntType);
     final long unrollingSize;
     final Optional<Formula> sliceSizeFormula;
 
